# vantage

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: turn-setup.md
docs/observability/: README.md  grafana-dashboard.json  otel-collector-grafana-cloud.yaml
docs/superpowers/plans/: 2026-06-17-vantage-poc-foundation.md  2026-06-18-vantage-phase3-video-testpattern.md  2026-06-19-vantage-phase4a-camera-tee-encoder.md  2026-06-21-vantage-phase4b-ros2-bridge.md  2026-06-26-vantage-phase5-multiconsumer-hwdecode.md  2026-06-30-vantage-phase6-fleet-mdns-teleop.md
docs/superpowers/plans/notes/: 2026-06-17-milestone-exit.md  2026-06-18-phase3-exit.md  2026-06-19-phase4a-exit.md  2026-06-21-phase4b-exit.md  2026-06-26-phase5-exit.md  2026-06-30-phase6-exit.md
docs/superpowers/specs/: 2026-06-21-vantage-phase4b-ros2-bridge-design.md
openspec/: project.md
openspec/changes/add-vantage-poc/: design.md  proposal.md  tasks.md
openspec/changes/add-vantage-poc/specs/camera-sharing/: spec.md
openspec/changes/add-vantage-poc/specs/discovery/: spec.md
openspec/changes/add-vantage-poc/specs/fleet-management/: spec.md
openspec/changes/add-vantage-poc/specs/telemetry/: spec.md
openspec/changes/add-vantage-poc/specs/video-streaming/: spec.md
spikes/moq/: .gitignore  Cargo.toml  README.md  compare.sh  congestion.sh  localhost.toml  run.sh
spikes/moq/src/: main.rs
vantage-client/: Cargo.toml
vantage-client/src/: discovery.rs  main.rs  session.rs  ui.rs
vantage-coordinator/: Cargo.toml
vantage-coordinator/src/: main.rs  registry.rs  routes.rs  sessions.rs
vantage-observability/: Cargo.toml
vantage-observability/src/: lib.rs
vantage-protocol/: Cargo.toml
vantage-protocol/src/: codec.rs  control.rs  discovery.rs  fleet.rs  ids.rs  lib.rs  signalling.rs  telemetry.rs
vantage-robot/: Cargo.toml
vantage-robot/src/: convert.rs  discovery.rs  main.rs  metrics.rs  safety.rs  telemetry.rs
vantage-robot/src/ros/: mod.rs
vantage-signalling/: Cargo.toml
vantage-signalling/src/: control.rs  decoder.rs  encoder.rs  lib.rs  peer.rs  robot_media.rs  ws.rs
