[workspace]
resolver = "3"
members = [
    "vantage-protocol",
    "vantage-signalling",
    "vantage-observability",
    "vantage-coordinator",
    "vantage-robot",
    "vantage-client",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (logs, metrics, traces) exported over OTLP/gRPC. Versions must
# move together — tracing-opentelemetry 0.33 pins the opentelemetry 0.32 line.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-semantic-conventions = "0.32"
tracing-opentelemetry = "0.33"
