[package]
name = "vantage-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
vantage-protocol = { path = "../vantage-protocol" }
vantage-signalling = { path = "../vantage-signalling" }
vantage-observability = { path = "../vantage-observability" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
slint = "1"
