[package]
name = "vantage-robot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
vantage-protocol = { path = "../vantage-protocol" }
vantage-signalling = { path = "../vantage-signalling" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# ROS 2 bridge (off by default). Both are patched to the Lyrical native crates /
# rclrs shim in the root .cargo/config.toml (see that file for why the patch is
# always-on). `sensor_msgs = "*"` lets the patch's native version satisfy the req.
rclrs = { version = "0.7", optional = true }
sensor_msgs = { version = "*", optional = true }

[features]
ros = ["dep:rclrs", "dep:sensor_msgs"]
