[package]
name = "vantage-robot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
vantage-protocol = { path = "../vantage-protocol" }
vantage-signalling = { path = "../vantage-signalling" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
mdns-sd.workspace = true
tokio-tungstenite = "0.24"
futures-util = "0.3"

# ROS 2 bridge (off by default). r2r generates its rcl + message bindings at
# build time from the sourced ROS 2 environment (no colcon/ament, no cargo
# patch). Pinned to a master rev because the crates.io release (0.9.5) predates
# Lyrical and rejects `ROS_DISTRO=lyrical`; this rev carries Lyrical support.
# Building with `--features ros` requires a sourced Lyrical env + libclang.
r2r = { git = "https://github.com/sequenceplanner/r2r", rev = "2d080c4dede3ec950620d2b82f6521bc4fa1e690", optional = true }

[features]
ros = ["dep:r2r"]
