[package]
name = "vantage-signalling"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
vantage-protocol = { path = "../vantage-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-tungstenite = "0.24"
futures-util = "0.3"
gstreamer = { version = "0.23", features = ["v1_22"] }
gstreamer-webrtc = { version = "0.23", features = ["v1_22"] }
gstreamer-sdp = { version = "0.23", features = ["v1_22"] }
